- Completed Implement Interface manager BillDetail: checkQuantity, updateMoney,design

--- a/src/main/java/vn/edu/nuce/daotao/StoreManager/view/jpanel/BillJpanel.form
+++ b/src/main/java/vn/edu/nuce/daotao/StoreManager/view/jpanel/BillJpanel.form
@@ -472,6 +472,9 @@
                               <Insets value="[2, 2, 2, 5]"/>
                             </Property>
                           </Properties>
+                          <Events>
+                            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtDCashKeyTyped"/>
+                          </Events>
                         </Component>
                       </SubComponents>
                     </Container>
