--- a/src/main/java/vn/edu/nuce/daotao/StoreManager/view/frame/Login.form
+++ b/src/main/java/vn/edu/nuce/daotao/StoreManager/view/frame/Login.form
@@ -266,8 +266,14 @@
               </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="txtUser">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="admin"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JPasswordField" name="txtPass">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Admin1234!"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
