--- a/src/main/java/vn/edu/nuce/daotao/StoreManager/view/frame/Login.form
+++ b/src/main/java/vn/edu/nuce/daotao/StoreManager/view/frame/Login.form
@@ -267,13 +267,19 @@
             </Component>
             <Component class="javax.swing.JTextField" name="txtUser">
               <Properties>
-                <Property name="text" type="java.lang.String" value="admin"/>
+                <Property name="text" type="java.lang.String" value="anhnv"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtUserActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JPasswordField" name="txtPass">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Admin1234!"/>
+                <Property name="text" type="java.lang.String" value="anhnvAB!1"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtPassActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
