--- a/src/main/java/vn/edu/nuce/daotao/StoreManager/report/reportNhapKho.jrxml
+++ b/src/main/java/vn/edu/nuce/daotao/StoreManager/report/reportNhapKho.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="phieunhap" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" >
 	<property name="ireport.zoom" value="1.2100000000000035"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="4"/>
+	<property name="ireport.y" value="3"/>
 	<parameter name="billCode" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -285,12 +285,12 @@ WHERE
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{chitietphieunhap_SoLuong}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField pattern="#,###;">
 				<reportElement x="276" y="11" width="102" height="20" />
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{chitietphieunhap_GiaTien}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField pattern="#,###;">
 				<reportElement x="395" y="11" width="144" height="20" />
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{chitietphieunhap_TongTien}]]></textFieldExpression>
@@ -359,7 +359,7 @@ WHERE
 				<reportElement x="227" y="13" width="32" height="20" />
 				<textFieldExpression><![CDATA[$V{chitietphieunhap_SoLuong_1}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField pattern="#,###;">
 				<reportElement x="394" y="13" width="145" height="39" />
 				<textElement>
 					<font fontName="Times New Roman" size="14" isBold="true"/>
