--- a/src/main/java/vn/edu/nuce/daotao/StoreManager/report/report1.jrxml
+++ b/src/main/java/vn/edu/nuce/daotao/StoreManager/report/report1.jrxml
@@ -291,7 +291,8 @@ WHERE
 				<textFieldExpression><![CDATA[$F{chitiethoadon_SoLuong}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,###;">
-				<reportElement x="395" y="11" width="131" height="20" />
+				<reportElement x="395" y="11" width="132" height="20" />
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{chitiethoadon_TongTien}]]></textFieldExpression>
 			</textField>
 			<textField>
@@ -302,8 +303,8 @@ WHERE
 				<reportElement x="18" y="53" width="526" height="1" />
 			</line>
 			<textField pattern="#,###;">
-				<reportElement x="276" y="11" width="96" height="20" />
-				<textElement textAlignment="Center"/>
+				<reportElement x="292" y="11" width="80" height="20" />
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{chitiethoadon_GiaTien}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -321,13 +322,14 @@ WHERE
 			</line>
 			<staticText>
 				<reportElement x="71" y="13" width="112" height="27" />
-				<textElement>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[TỔNG CỘNG]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="224" y="20" width="35" height="20" />
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$V{chitiethoadon_SoLuong_1}]]></textFieldExpression>
 			</textField>
 			<line>
@@ -352,8 +354,10 @@ WHERE
 				<reportElement x="543" y="0" width="1" height="62" />
 			</line>
 			<textField pattern="#,###;">
-				<reportElement x="394" y="1" width="131" height="29" />
-				<textElement verticalAlignment="Middle"/>
+				<reportElement x="395" y="13" width="132" height="29" />
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="14" isBold="true"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{hoadon_TongTien}]]></textFieldExpression>
 			</textField>
 			<staticText>
