--- a/src/main/java/vn/edu/nuce/daotao/StoreManager/report/reportNhapKho.jrxml
+++ b/src/main/java/vn/edu/nuce/daotao/StoreManager/report/reportNhapKho.jrxml
@@ -281,23 +281,23 @@ WHERE
 				<textFieldExpression><![CDATA[$F{sanpham_TenSanPham}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="212" y="11" width="62" height="20" />
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<reportElement x="224" y="11" width="47" height="20" />
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{chitietphieunhap_SoLuong}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,###;">
-				<reportElement x="276" y="11" width="102" height="20" />
-				<textElement textAlignment="Center"/>
+				<reportElement x="292" y="11" width="75" height="20" />
+				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$F{chitietphieunhap_GiaTien}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,###;">
-				<reportElement x="395" y="11" width="144" height="20" />
-				<textElement verticalAlignment="Middle"/>
+				<reportElement x="395" y="11" width="132" height="20" />
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{chitietphieunhap_TongTien}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="18" y="11" width="37" height="20" />
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{chitietphieunhap_MaSanPham}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -360,8 +360,8 @@ WHERE
 				<textFieldExpression><![CDATA[$V{chitietphieunhap_SoLuong_1}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,###;">
-				<reportElement x="394" y="13" width="145" height="39" />
-				<textElement>
+				<reportElement x="394" y="13" width="133" height="39" />
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="14" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{phieunhap_TongTien}]]></textFieldExpression>
